--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 * {
   font-family: "Helvetica", "Arial", sans-serif;
   }
+
+  body {
+    padding: 0 30px 0 30px;
+  }
+
+  header{
+    height: 100px;
+    border-bottom: 1px solid #ccc;
+  }
