--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@
     height: 100px;
     border-bottom: 1px solid #ccc;
   }
+
+header nav{
+  float: right;
+}
+
+nav ul{
+  padding: 0;
+  margin: 40px 0 0 0;
+}
