--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ h3#header{
 #header a:hover{
   text-decoration: underline;
 }
+
+div.jumbotron{
+  border-radius: 5px;
+  background-color: #e9ecef;
+  padding: 10px;
+  text-align: center;
+}
