--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ h3#header{
   text-decoration: underline;
 }
 
+main {
+  margin-top: 20px;
+}
+
 div.jumbotron{
   border-radius: 5px;
   background-color: #e9ecef;
