--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ div.questions a.btn:hover{
   border-color: #0069d9;
 }
 
+div.questions p{
+  margin-top: 30px;
+}
+
 footer{
   border-top: 1px solid #CCC;
   margin-top: 80px;
